media/service_dream.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreambox-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: dreambox
  ports:
  - port: 3000
    targetPort: 3000
