media/ingress_dream.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreambox-ingress
  namespace: media
spec:
  rules:
  - host: dreambox.cloud.carabillo.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dreambox-service
            port:
              number: 3000
